fixing logo alignment

--- a/_sass/includes/_wizard.sass
+++ b/_sass/includes/_wizard.sass
@@ -13,8 +13,7 @@
 		margin-left: -40px
 		float: left
 		+breakpoint($mobile)
-			margin: 0 auto
-			float: none
+			margin-left: -20px
 
 .wizard
 	display: block
